@@ -1,3 +1,5 @@
+2005/12/15 -- released version 20051215_trunk
+
 2005/12/14 -- released version 20051214_trunk
 
 2005/12/13 -- released version 20051213_trunk
